--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,21 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
+frontend/dist
+frontend/dist-ssr
+
+# Environment variables
+.env
+backend/.env
 *.local
 
 # Editor directories and files
