added to on my gitignore

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,6 @@
-# MySQL database config
 DB_HOST=localhost
-DB_USER=dishuser
-DB_PASSWORD=ogh!Hlhg.al
+DB_USER=root
+DB_PASSWORD="Beza102#"
 DB_NAME=that_one_dish
 DB_PORT=3306
-
-# Server config
 PORT=3000
